--- a/src/components/main.css
+++ b/src/components/main.css
@@ -24,10 +24,22 @@ html, body, #root {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-  }
+}
   
-  .container {
+.container {
     width: 100vw;
     max-width: 100%;
-  }
+}
+.wicketColor{ 
+    color:#fff;
+    background-color: #ff0000;
+}
+.noBallColor{
+    color:#fff;
+    background-color: #ffa500;
+}
+.wideBallColor{
+    color:#fff;
+    background-color: #cc3300;
+}
   
